--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -10,6 +10,15 @@
       width: 70px;
       padding: 25px;
     }
+
+    .title-name-container {
+      position:absolute;
+      right: 45vw;
+    }
+
+    .title-name {
+      color: rgb(56, 23, 23);
+    }
   
     .options {
       width: 50%;
@@ -21,6 +30,7 @@
       .option {
         padding: 10px 15px;
         cursor: pointer;
+        font-size: 20px;
       }
     }
   }
